...
		_insects = FetchRequest(fetchRequest: Insect.searchByName(searchTerm: text.wrappedValue))
	}

	var body: some View {
		ZStack(alignment: .top) {
			TextField("Nombre de la especie", text: $text, onEditingChanged: { isFocused = $0 })
				.accessibilityIdentifier("text_autocomplete")
				.frame(width: 200, height: 56)
				.padding(.horizontal, 16)
				.clearButton(text: $text)
				.overlay {
				RoundedRectangle(cornerRadius: 4)
					.inset(by: 1)
...
